--- a/workflows/pages.yml
+++ b/workflows/pages.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: 04_dashboard   # 👈 This tells Pages to publish THIS folder as the root
+          path: folder_name
       - id: deployment
         uses: actions/deploy-pages@v4
